# trivial_application

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: exampleapp.h  exampleappprefs.h  exampleappwin.h
src/: exampleapp.c  exampleapp.gresource.xml  exampleappprefs.c  exampleappwin.c  main.c  menu.ui  preference.gschema.xml  prefs.ui  window.ui
src/.deps/: main.Po
